Added extension and backend folders

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb+srv://yashkolnure58:Yash1234@cluster0.emc7ptc.mongodb.net/
 JWT_SECRET=your_super_secret_key
 RAZORPAY_KEY_ID=rzp_live_R795ytd3I8Ex1o
 RAZORPAY_KEY_SECRET=BhqKyMs4swWH4xCwUcFkD7h5
+GEMINI_API_KEY=AIzaSyBWyjoWm_VH1X0U_14mlgzOKZJNWoLNz0s
