--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ RAZORPAY_KEY_ID=rzp_live_R795ytd3I8Ex1o
 RAZORPAY_KEY_SECRET=BhqKyMs4swWH4xCwUcFkD7h5
 GEMINI_API_KEY=AIzaSyC6KcojG7D2Uq_lHryo9c3v6wmuDtT9Rm0
 OPENAI_API_KEY=AIzaSyC6KcojG7D2Uq_lHryo9c3v6wmuDtT9Rm0
-GROQ_API_KEY=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
+# GROQ_API_KEY=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
